# minem

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.override.example.yml  docker-compose.yml  import-sources.example.json  package-lock.json  package.json  product-version.json  public-release.json  pyproject.toml  requirements.txt  server.py  start.sh  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
desktop/: README.md  package-lock.json  package.json  requirements-build.txt
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: DESIGN_SYSTEM.md  GITHUB_RELEASE_CHECKLIST.md  MineM_AGENT_RUNTIME.md  MineM_AUDIT_RUNBOOK.md  MineM_CLI_能力范围.md  MineM_CORE_TEST_PLAN.md  MineM_LOCAL_AI_CLIENT_PRD.md  MineM_LOCAL_AI_CLIENT_TECHNICAL.md  MineM_PRD.md  MineM_TAG_SYSTEM_PRD.md  MineM_TECHNICAL.md  OPEN_SOURCE_RELEASE.md  README.md  VERSIONING.md  macos-desktop-client-prd.md  macos-desktop-client.md
frontend/: index.html
local-tts/: Dockerfile  server.py
minem/: __init__.py  assets.py  case_groups.py  config.py  db.py  html_dependencies.py  html_splitter.py  import_tasks.py  imports.py  lineage.py  paths.py  report_canvas.py  report_exports.py  report_package_importer.py  report_package_writer.py  reports.py  resource_importer.py  runtime_discovery.py  similarity.py  tag_tasks.py  tagging.py  thumbnails.py  upload_safety.py
scripts/: check_api_contract.py  check_public_boundary.py  (+15 more)
(+36 files in other folders)
