[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "minem-cli"
version = "0.5.0"
description = "Official CLI for the local-first MineM presentation material platform"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "MineM Contributors"}]
keywords = ["presentation", "materials", "cli", "ai-agent", "local-first"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Jo-Tsu/minem"
Documentation = "https://github.com/Jo-Tsu/minem/tree/main/docs"
Issues = "https://github.com/Jo-Tsu/minem/issues"

[project.scripts]
minem = "minem.cli.main:main"

[tool.setuptools.packages.find]
include = ["minem*"]
