[package]
name = "minem-desktop"
version = "0.4.0"
description = "MineM macOS desktop client"
license = "Apache-2.0"
repository = "https://github.com/Jo-Tsu/minem"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
url = "2.5"
